@@ -806,6 +806,7 @@ Marek Majkowski
 Grzegorz Makarewicz
 David Malcolm
 Greg Malcolm
+William Mallard
 Ken Manheimer
 Vladimir Marangozov
 Colin Marc
